2008-06-02  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOO.c (ReleaseClassContents): Tidy up a bit by hiding more
	of the details of how lists work; they're not interesting, but they
	were verbose. No longer...

	* generic/tclOO.c (ReleaseClassContents): Fix reference counting
	problem identified by Keven Kenny through use of valgrind, which was
	caused by failing to protect the Object as well as the Class (attached
	to it) of a subclass being deleted and hence getting a freed-memory
	read when attempting to delete the class command. [Bug 1981001]

2008-06-01  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOOMethod.c (Tcl_NewMethod): Fix wrong initialization of
	reference counts when changing a method that is currently in use.
	Thanks to Kevin Kenny for spotting. [Bug 1981001]

2008-05-31  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOO.c (InitFoundation): Correct reference counting for
	strings used when creating the constructor for classes.
	* generic/tclOOMethod.c (TclOODelMethodRef): Correct fencepost error
	in reference counting of method implementation structures.
	* tests/oo.test (oo-0.5): Added a test to detect a memory leak problem
	relating to disposal of the core object system.

2008-05-30  Donal K. Fellows  <dkf@users.sf.net>

	=== RELEASE OF TCLOO VERSION 0.4 ===

	* configure.in, generic/tclOO.h, tests/oo.test, win/TclOO.rc: Update
	version numbers for 0.4 release. This version constitutes the point
	where a merge to Tcl 8.6a0 (after TIP#257) was carried out.

2008-05-29  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOOCall.c (TclOOGetSortedClassMethodList):
	* generic/tclOOInfo.c (InfoObjectMethodsCmd, InfoClassMethodsCmd):
	* tests/oo.test, doc/ooInfo.n: Corrected, simplified and systematized
	the code to introspect the list of methods supported by an object or
	class. Now, -all checks (super)classes and -private gets what is
	accepted by [my].

2008-05-28  Donal K. Fellows  <dkf@users.sf.net>
